# deep_thinker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
agent/: build.gradle.kts
agent/src/main/kotlin/org/deep_thinker/agent/dqn/: DQNAgentFactoryVerticle.kt  DQNConfig.kt  DeepQLearning.kt  DeepQLearningAgentVerticle.kt  DeepQLearningDJL.kt  DeepQLearningDJL2.kt  DeepQLearningFactory.kt  DeepQLearningVerticle.kt  DeepQNetworkDJL.kt
agent/src/main/kotlin/org/deep_thinker/codec/: codec.kt
agent/src/main/kotlin/org/deep_thinker/experiment/: ExperimentVerticle.kt  RunExperiment.kt
agent/src/main/kotlin/org/deep_thinker/kotlindl_test/: FashionMnist.kt
agent/src/main/kotlin/org/deep_thinker/replay/: ReplayBuffer.kt  ReplayBufferSample.kt
agent/src/main/kotlin/org/deep_thinker/verticles/: DQNAgentFactoryVerticle.kt  EnvironmentVerticle.kt
cartpole_dqn/: build.gradle.kts
cartpole_dqn/src/main/java/org/deep_thinker/cartpole_dqn/: CartpoleDQNMain.java  CartpoleDqnZeroMQMain.java
cartpole_dqn/src/test/java/org/deep_thinker/cartpole_dqn/: CartpoleDQNDJLTest.java  CartpoleDQNTest.java
cartpole_environment/: build.gradle.kts
cartpole_environment/src/main/java/org/deep_thinker/env/cartpole/: Cartpole.java
deep_learning/: build.gradle.kts
deep_learning/src/main/java/org/deep_thinker/dl/mnist/: DigitData.java  StopEvaluator.java  TrainNetwork.java
deep_learning/src/main/kotlin/org/deep_thinker/dl/activation/: Activation.kt
deep_learning/src/main/kotlin/org/deep_thinker/dl/cost/: CostFunction.kt  HalfQuadratic.kt  MSE.kt  Quadratic.kt
deep_learning/src/main/kotlin/org/deep_thinker/dl/initializer/: HeNormal.kt  HeUniform.kt  Initializer.kt  InitializerFunction.kt  LeCunNormal.kt  LeCunUniform.kt  Random.kt  XavierNormal.kt  XavierUniform.kt
deep_learning/src/main/kotlin/org/deep_thinker/dl/math/: Function.kt  Matrix.kt  SharedRnd.kt  Vec.kt
deep_learning/src/main/kotlin/org/deep_thinker/dl/network/: Layer.kt  NeuralNetwork.kt  Result.kt
deep_learning/src/main/kotlin/org/deep_thinker/dl/optimizer/: GradientDescent.kt  Momentum.kt  Nesterov.kt  (+1 more)
deep_thinker/: Cargo.toml
deep_thinker/src/: lib.rs  model.rs  replay_buffer.rs
deep_thinker/src/agents/: dqn.rs  mod.rs
deep_thinker_api/: Cargo.toml
deep_thinker_api/src/: model.rs
environments/: Cargo.toml
environments/src/: cartpole.rs  lib.rs
examples/cartpole_dqn/: Cargo.toml  README.md
examples/cartpole_dqn/src/: cartpole.rs  main.rs
examples/cartpole_dqn_zenoh/: Cargo.toml
examples/cartpole_dqn_zenoh/src/: main.rs
flatbuffer/: model.fbs
gradle/wrapper/: gradle-wrapper.properties
model/: build.gradle.kts
model/src/main/java/org/deep_thinker/model/: DQNConfig.java  DQNConfigFlat.java  DeepThinkerClient.java  EpisodeCompleteFlat.java  GetActionFlat.java  GetActionResponse.java  GetFirstActionFlat.java  GetFirstActionResponse.java  IntFlat.java  MessageTypes.java  RequestMetadata.java  ResponseMetadata.java  StringFlat.java
model/src/main/java/org/deep_thinker/serde/: DQNConfigFlatSerde.java  DQNConfigSerde.java  EpisodeCompleteFlatSerde.java  FlatSerde.java  GetActionFlatSerde.java  GetFirstActionFlatSerde.java  GetFirstActionSerde.java  IntFlatSerde.java  IntMessagePackSerde.java  MessagePackSerde.java  RequestMetadataSerde.java  ResponseMetadataSerde.java  StringFlatSerde.java  StringMessagePackSerde.java  VoidSerde.java
model/src/main/kotlin/org/deep_thinker/model/: DQNConfig.kt  DeepThinkerClient.kt  Environment.kt  ReplayBuffer.kt  ReplayBufferSample.kt  Step.kt  TopicGenerator.kt  model.kt
src/: cartpole.rs  main.rs
zenoh_client/: Cargo.toml
zenoh_client/src/: lib.rs
zenoh_server/: Cargo.toml
zenoh_server/src/: main.rs
zeromq_client/: build.gradle.kts
zeromq_server/: build.gradle.kts
zeromq_server/src/main/kotlin/: Main.kt  StartZeroMQServer.kt
(+22 files in other folders)
