[package]
name = "zenoh_client"
version = "0.1.0"
edition = "2021"

[dependencies]
zenoh = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
clap = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
deep_thinker_api = { path = "../deep_thinker_api" }
crossbeam-channel = { workspace = true }
