[package]
name = "cartpole_dqn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.10.0", features = ["train", "wgpu", "ndarray", "autodiff"] }
burn-autodiff = "0.10.0"
burn-ndarray = "0.10.0"
burn-wgpu = "0.10.0"
burn-train = "0.10.0"

deep_thinker = { path = "../../deep_thinker" }
rand = { workspace = true }
serde = { workspace = true }